--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav.menu a
 }
 .header2 .word4
 {
-    margin: auto 0 auto 125px;
+    margin: auto 125px auto 125px;
     color: #525E75;
     font-size: 24px;
     line-height: 180%;
